--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -56,7 +56,7 @@
 <div id="loading-overlay"></div>
 
 <!-- Mobile Navigation -->
-<button id="mobile-nav-toggle" class="icon icon-sm icon-circle" data-target="mobile-nav"><i class="ti-menu"></i><i class="ti-close"></i></button>
+<button id="mobile-nav-toggle" class="icon icon-sm icon-circle" data-target="mobile-nav"><i class="ti-menu"></i><i class="ti-close" style="color: black;"></i></button>
 <nav id="mobile-nav">
 
 </nav>
