Add more functionality

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -63,6 +63,9 @@
 
 <div id="tmp"></div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
+
+
 <!-- JS Libraries -->
 <script src="assets/js/jquery-1.11.3.min.js"></script>
 
