Changed static uid to localstorage

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -68,6 +68,7 @@
 
 <!-- JS Libraries -->
 <script src="assets/js/jquery-1.11.3.min.js"></script>
+<script src="assets/js/dbx-sdk.min.js"></script>
 
 <!-- JS Plugins -->
 <script src="assets/js/plugins.js"></script>
