Moved moment localy

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -63,7 +63,7 @@
 
 <div id="tmp"></div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
+<script src="assets/js/moment.js"></script>
 
 
 <!-- JS Libraries -->
