--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 <!-- <link rel="stylesheet" href="assets/css/base.min.css" /> -->
 <link rel="stylesheet" href="assets/css/base.css" />
 
+
+
 </head>
 
 <body>
@@ -63,8 +65,12 @@
 
 <div id="tmp"></div>
 
+
+
 <!-- JS Libraries -->
 <script src="assets/js/jquery-1.11.3.min.js"></script>
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
 <!-- JS Plugins -->
 <script src="assets/js/plugins.js"></script>
